admin: enabling more layouts

--- a/locales/en.json
+++ b/locales/en.json
@@ -444,6 +444,7 @@
           "placeholder": "Especify how the question will be shown",
           "simple": "Simple",
           "details": "Detailed",
+          "accordion": "Accordion",
           "circles": "Images with details"
         },
         "option": {
