--- a/locales/es.json
+++ b/locales/es.json
@@ -268,7 +268,8 @@
     "successRegistration": "Exitoso",
     "errorRegistration": "Error",
 
-    "invalidCredentials": "Credenciales no válidas"
+    "invalidCredentials": "Credenciales no válidas",
+    "invalidDataRegEx": "Datos inválidos"
   },
 
   "avAdmin": {
@@ -484,6 +485,8 @@
         "tlfOption": "tlf",
         "intOption": "int",
         "boolOption": "bool",
+        "fieldRegExLabel": "Expresión regular",
+        "fieldRegExPlaceholder": "Ejemplo: '^(1000|1010)$'",
         "captchaOption": "captcha",
         "textareaOption": "textarea",
         "configurationHeader": "Configuration",
