booth: adding first version for conditional-accordion question layout, seems to work fine, no option reordering yet though

--- a/locales/en.json
+++ b/locales/en.json
@@ -446,7 +446,8 @@
           "simple": "Simple",
           "details": "Detailed",
           "accordion": "Accordion",
-          "circles": "Images with details"
+          "circles": "Images with details",
+          "conditional-accordion": "Conditional Accordion"
         },
         "option": {
           "textFieldLabel": "Text",
