--- a/locales/es.json
+++ b/locales/es.json
@@ -148,7 +148,8 @@
 
     "ahoramPrimaries": {
       "selectAll": "Seleccionar todo el equipo",
-      "selectedOptions": "Opciones seleccionadas (en orden)",
+      "deselectAll": "Deseleccionar todo el equipo",
+      "selectedOptions": "Opciones seleccionadas (en orden, pincha y arrastra para cambiarlo)",
       "mayoral": "Alcaldía (__count__)",
       "mayoral_plural": "Alcaldía (__count__)",
       "councils": "Concejalías (__count__)",
