--- a/locales/en.json
+++ b/locales/en.json
@@ -149,7 +149,7 @@
 
     "ahoramPrimaries": {
       "selectAll": "Select the whole team",
-      "deselectAll": "Deelect the whole team",
+      "deselectAll": "Deselect the whole team",
       "selectedOptions": "Selected options (in order, drag and drop to change it)",
       "mayoral": "Mayoral (__count__)",
       "mayoral_plural": "Mayoral (__count__)",
