--- a/locales/en.json
+++ b/locales/en.json
@@ -235,7 +235,7 @@
     "registerFormHelpTitle": "Registering to vote",
     "registerAdminFormHelpTitle": "Registering to create elections",
     "fillValidFormText": "To be able to send the form, please fill correctly first all the fields.",
-    "invalidRegisterData": "No ha sido posible registrarte con los datos aportados. Por favor, revísalos, o ponte en contacto con los administradores de la votación,",
+    "invalidRegisterData": "No ha sido posible registrarte con los datos aportados. <strong>Lo más probable es que ya estés registrado, <a href=\"__url__\">accede usando tus credenciales pinchando aquí</a></strong>. También puede que el periodo de votación haya finalizado. Comprueba todo lo anterior, y en caso de que sigas teniendo problemas, revisa tus datos, o ponte en contacto con los administradores de la votación,",
     "logout": "Logout",
     "emailLabel": "Email",
     "telLabel": " Mobile telephone number",
@@ -263,7 +263,7 @@
     "dniPlaceholder": "DNI",
     "alreadyRegistered": "Already registered?",
     "helpAlreadyRegisteredForm": "Maybe you are already registered and what you really need is to authenticate.",
-    "loginHere": "Enter: I have already registered before",
+    "loginHere": "Access using my credentials, I have already registered before",
 
     "tlfError": "Invalid phone",
     "dniError": "DNI example 12345678H",
