showing voting system in results, and adding more info to borda counts

--- a/locales/en.json
+++ b/locales/en.json
@@ -163,6 +163,7 @@
     "defaultShareText": "Vote in __title__ with @agoravoting __url__",
 
     "resultsHeader": "__title__: Results",
+    "resultsTableNPositionHeader": "Number of votes by position:",
     "resultsTableCandidateHeader": "Candidature",
     "resultsTableVotesHeader": "Votes",
     "resultsTableVotesPercentageHeader": "",
