improving login and adding option to resend codes

--- a/locales/es.json
+++ b/locales/es.json
@@ -241,10 +241,16 @@
     "invalidRegisterData": "No ha sido posible registrarte con los datos aportados. <strong>Lo más probable es que ya estés registrado, <a href=\"__url__\">accede usando tus credenciales pinchando aquí</a></strong>. También puede que el periodo de votación haya finalizado. Comprueba todo lo anterior, y en caso de que sigas teniendo problemas, revisa tus datos, o ponte en contacto con los administradores de la votación,",
     "logout": "Salir",
     "codeLabel": "Código de Autenticación",
+    "codePlaceholder": "Introduce el código",
+    "codeHelp": "Por favor usa el último código que te enviamos al teléfono. Es un código alfanumérico de 8 caracters.",
+    "errorSendingAuthCode": "Error enviando el código. Revisa que no pusiste mal tu teléfono, o quizás lo enviaste demasiadas veces. Si persiste el problema, contacta con los organizadores.",
+    "noCodeReceivedQuestion": "¿Todavía no has recibido el código?",
+    "sendCodeAgain": "Volver a enviar el código",
     "emailLabel": "Correo electrónico",
     "telLabel": " Número de teléfono móvil",
     "telInvalid": " Número de teléfono inválido. Ejemplo de número válido: 666666666",
-    "telHelp": "Ejemplo: 666666666 (sólo números, sin espacios ni guiones. Para números extranjeros, usa un prefijo tipo +34)",
+    "telPlaceholder": "Ejemplo: 666666666",
+    "telHelp": "Ssólo números, sin espacios ni guiones. Para números extranjeros, usa un prefijo tipo +34",
     "emailPlaceholder": "fulanito@ejemplo.com",
     "passwordLabel": "Contraseña",
     "passwordPlaceholder": "contraseña",
@@ -275,7 +281,6 @@
 
     "validateHeader": "Código de validación",
     "validateButton": "Validar",
-    "codePlaceholder": "código",
 
     "loadingRegistration": "Cargando",
     "successRegistration": "Exitoso",
