--- a/locales/en.json
+++ b/locales/en.json
@@ -239,9 +239,15 @@
     "invalidRegisterData": "No ha sido posible registrarte con los datos aportados. <strong>Lo más probable es que ya estés registrado, <a href=\"__url__\">accede usando tus credenciales pinchando aquí</a></strong>. También puede que el periodo de votación haya finalizado. Comprueba todo lo anterior, y en caso de que sigas teniendo problemas, revisa tus datos, o ponte en contacto con los administradores de la votación,",
     "logout": "Logout",
     "emailLabel": "Email",
+    "codePlaceholder": "Insert the code",
+    "codeHelp": "Please use the last code we have sent to your phone. The code will have 8 alphanumeric characters.",
+    "noCodeReceivedQuestion": "Did not receive your code yet?",
+    "sendCodeAgain": "Send code again",
     "telLabel": " Mobile telephone number",
     "telInvalid": " Invalid telephone number. Example of valid number: +34666666666",
-    "telHelp": " Example: +34666666666 (only numbers, with no spaces or hyphens. For numbers outside Spain, use the country prefix, for example +34)",
+    "telPlaceholder": "Example: +34666666666",
+    "telHelp": "Only numbers, with no spaces or hyphens. For numbers outside Spain, use the country prefix, for example +34.",
+    "errorSendingAuthCode": "Error sending the code. Please review that you wrote correctly your phone, or maybe you sent the code too many times. If the problem persist, contact with the organization.",
     "codeLabel": "Authentication Code",
     "emailPlaceholder": "john@example.com",
     "passwordLabel": "Password",
@@ -273,7 +279,6 @@
 
     "validateHeader": "Validate code",
     "validateButton": "Validate",
-    "codePlaceholder": "code",
 
     "loadingRegistration": "Loading",
     "successRegistration": "Success",
