--- a/locales/en.json
+++ b/locales/en.json
@@ -497,6 +497,8 @@
         },
         "censusadd": "Voters added to the census",
         "actionsDropdown": "Actions",
+        "selectAllShownAction": "Select all people shown",
+        "deselectAllShownAction": "Deselect all people shown",
         "exportCensusAction": "Export all census to CSV",
         "removeCensusAction": "Remove __num__ selected people",
         "sendAuthCodesAction": "Send auth codes to __num__ selected..",
