--- a/locales/es.json
+++ b/locales/es.json
@@ -495,6 +495,8 @@
         "fields": {"label": "Campos extra", "placeholder": "Campos extra del votante"},
         "censusadd": "Voters added to the census",
         "actionsDropdown": "Actions",
+        "selectAllShownAction": "Selectionar a todas las personas visibles",
+        "deselectAllShownAction": "Deselectionar a todas las personas visibles",
         "exportCensusAction": "Export all census to CSV",
         "removeCensusAction": "Remove __num__ selected people",
         "sendAuthCodesAction": "Send auth codes to __num__ selected..",
