small fixes to accordion layout

--- a/locales/en.json
+++ b/locales/en.json
@@ -146,6 +146,7 @@
 
     "circleOptionExternalLink": "View details",
     "voteInBlank": "Blank Vote",
+    "openOptionLink": "Open link in a new tab",
 
     "ahoramPrimaries": {
       "selectAll": "Select the whole team",
