--- a/locales/es.json
+++ b/locales/es.json
@@ -147,6 +147,7 @@
 
     "circleOptionExternalLink": "Ver detalles",
     "voteInBlank": "Votar en Blanco",
+    "openOptionLink": "Abrir enlace en nueva pestaña",
 
     "ahoramPrimaries": {
       "selectAll": "Seleccionar todo el equipo",
