admin census: showing hlep text when census is empty and showing currently number of affected people in the actions button

--- a/locales/en.json
+++ b/locales/en.json
@@ -507,6 +507,8 @@
         },
         "addPersonAction": "Add person..",
         "addCsvAction": "Add CSV to census..",
+        "filteredEmptyResults": "No person matched the current filter.",
+        "emptyCensus": "Census is currently empty. You can add people through the Actions button.",
 
         "censusadd": "Voters added to the census",
         "actionsDropdown": "Actions",
