admin create: adding text size limits to election creation checks

--- a/locales/es.json
+++ b/locales/es.json
@@ -584,6 +584,22 @@
           "election-array-length-min-questions": "Votación '__eltitle__': debe haber al menos __min__ preguntas, pero solo hay  __num__",
           "election-array-length-max-questions": "Votación '__eltitle__': debe haber como mucho __max__ preguntas, pero hay __num__",
           "election-question-is-array-answers": "Votación '__eltitle__': la lista de candidaturas no es un array",
+
+          "election-array-length-max-description": "Votación '__eltitle__': la descripción tiene una longitud de __num__ caracteres, sobrepasando el máximo de __max__ caracteres",
+          "election-is-string-description": "Votación '__eltitle__': la descripción no es una cadena de texto",
+          "election-array-length-max-title": "Votación '__eltitle__': el título tiene una longitud de __num__ caracteres, sobrepasando el máximo de __max__ caracteres",
+          "election-is-string-title": "Votación '__eltitle__': el título no es una cadena de texto",
+          "election-question-array-length-max-description": "Votación '__eltitle__', pregunta '__qtitle__': la descripción tiene una longitud de __num__ caracteres, sobrepasando el máximo de __max__ caracteres",
+          "election-question-is-string-description": "Votación '__eltitle__', pregunta '__qtitle__': la descripción no es una cadena de texto",
+          "election-question-array-length-max-title": "Votación '__eltitle__', pregunta '__qtitle__': el título tiene una longitud de __num__ caracteres, sobrepasando el máximo de __max__ caracteres",
+          "election-question-is-string-title": "Votación '__eltitle__', pregunta '__qtitle__': el título no es una cadena de texto",
+          "election-question-answer-array-length-max-text": "Votación '__eltitle__', pregunta '__qtitle__', candidatura '__atext__': el texto tiene una longitud de __num__ caracteres, sobrepasando el máximo de __max__ caracteres",
+          "election-question-answer-is-string-description": "Votación '__eltitle__', pregunta '__qtitle__', candidatura '__atext__': la descripción no es una cadena de texto",
+          "election-question-answer-array-length-min-text": "Votación '__eltitle__', pregunta '__qtitle__', candidatura '__atext__': el texto tiene una longitud de __num__ caracteres, pero debe tener al menos __min__ caracteres",
+          "election-question-answer-is-string-text": "Votación '__eltitle__', pregunta '__qtitle__', candidatura '__atext__': el texto no es una cadena de texto",
+          "election-question-answer-array-length-max-description": "Votación '__eltitle__', pregunta '__qtitle__', candidatura '__atext__': la descripción tiene una longitud de __num__ caracteres, sobrepasando el máximo de __max__ caracteres",
+          "election-question-answer-array-length-max-category": "Votación '__eltitle__', pregunta '__qtitle__', candidatura '__atext__': la categoría tiene una longitud de __num__ caracteres, sobrepasando el máximo de __max__ caracteres",
+          "election-question-answer-is-string-category": "Votación '__eltitle__', pregunta '__qtitle__', candidatura '__atext__': la categoría no es una cadena de texto",
           "election-question-is-int-min": "Votación '__eltitle__', pregunta '__qtitle__': el mínimo número de candidaturas que puede seleccionar un votante no es un número entero",
           "election-question-is-int-max": "Votación '__eltitle__', pregunta '__qtitle__': el máximo número de candidaturas que puede seleccionar un votante no es un número entero",
           "election-question-is-int-num-winners": "Votación '__eltitle__', pregunta '__qtitle__': el número de ganadores no es un número entero",
