--- a/locales/en.json
+++ b/locales/en.json
@@ -578,6 +578,21 @@
           "election-is-array-questions": "Election '__eltitle__': list of questions is not an array",
           "election-array-length-min-questions": "Election '__eltitle__': there must be at least __min__ questions but there are only __num__",
           "election-array-length-max-questions": "Election '__eltitle__': there must be at most __max__ questions but there are __num__",
+          "election-array-length-max-description": "Election '__eltitle__': description length is __num__, exceeding the maximum of __max__",
+          "election-is-string-description": "Election '__eltitle__': description is not a string",
+          "election-array-length-max-title": "Election '__eltitle__': title length is __num__, exceeding the maximum of __max__",
+          "election-is-string-title": "Election '__eltitle__': title is not a string",
+          "election-question-array-length-max-description": "Election '__eltitle__', question '__qtitle__': description length is __num__, exceeding the maximum of __max__",
+          "election-question-is-string-description": "Election '__eltitle__', question '__qtitle__': description is not a string",
+          "election-question-array-length-max-title": "Election '__eltitle__', question '__qtitle__': title length is __num__, exceeding the maximum of __max__",
+          "election-question-is-string-title": "Election '__eltitle__', question '__qtitle__': title is not a string",
+          "election-question-answer-array-length-max-text": "Election '__eltitle__', question '__qtitle__', answer '__atext__': text length is __num__, exceeding the maximum of __max__",
+          "election-question-answer-is-string-text": "Election '__eltitle__', question '__qtitle__', answer '__atext__': text is not a string",
+          "election-question-answer-array-length-min-text": "Election '__eltitle__', question '__qtitle__', answer '__atext__': text length is __num__, but it has to be at least __min__ characters long",
+          "election-question-answer-array-length-max-details": "Election '__eltitle__', question '__qtitle__', answer '__atext__': details length is __num__, exceeding the maximum of __max__",
+          "election-question-answer-is-string-details": "Election '__eltitle__', question '__qtitle__', answer '__atext__': details is not a string",
+          "election-question-answer-array-length-max-category": "Election '__eltitle__', question '__qtitle__', answer '__atext__': category length is __num__, exceeding the maximum of __max__",
+          "election-question-answer-is-string-category": "Election '__eltitle__', question '__qtitle__', answer '__atext__': category is not a string",
           "election-question-is-array-answers": "Election '__eltitle__': list of answers is not an array",
           "election-question-is-int-min": "Election '__eltitle__', question '__qtitle__': the minimum number of candidates that a voter can choose is not an integer",
           "election-question-is-int-max": "Election '__eltitle__', question '__qtitle__': the maximum number of candidates that a voter can choose is not an integer",
