--- a/locales/es.json
+++ b/locales/es.json
@@ -519,6 +519,10 @@
         "removedCensusSuccessfully": "Removed selected people from census successfully",
         "sentCodesSuccessfully": "Sent authentication codes successfully",
 
+        "voted": "votó",
+        "notVoted": "no votó",
+        "votedColumnHeader": "Votó?",
+
         "censusadd": "Voters added to the census",
         "actionsDropdown": "Actions",
         "selectAllShownAction": "Selectionar a todas las personas visibles",
