--- a/locales/es.json
+++ b/locales/es.json
@@ -510,7 +510,11 @@
 
           "removePeopleHeader": "Remove selected people from census",
           "removePeopleBody": "Removing the selected __num__ people from the census is definitive. Note that this will not remove their votes if they have voted.",
-          "confirmRemovePeopleButton": "Confirm and REMOVE selected __num__ people from census"
+          "confirmRemovePeopleButton": "Confirm and REMOVE selected __num__ people from census",
+
+          "exportAllCensusHeader": "Export all census in CSV",
+          "exportAllCensusBody": "Here you can download the whole census in a CSV (Comma Separated Values) spreadsheet format, so that you can process it elsewhere. There are __total__ people in your census. Depending on the size of the census, the process of downloading the whole census can take a while. Once it finishes, you will be prompted to download the census. If you have any filter active, this filter will also be applied to the downloaded CSV file.",
+          "confirmexportAllCensusButton": "Confirm and download the census, with __total__ people"
         },
         "addPersonAction": "Add person..",
         "addCsvAction": "Add CSV to census..",
@@ -527,7 +531,7 @@
         "actionsDropdown": "Actions",
         "selectAllShownAction": "Selectionar a todas las personas visibles",
         "deselectAllShownAction": "Deselectionar a todas las personas visibles",
-        "exportCensusAction": "Export all census to CSV",
+        "exportCensusAction": "Export all census to CSV..",
         "removeCensusAction": "Remove __num__ selected people..",
         "sendAuthCodesAction": "Send auth codes to __num__ selected..",
         "idColumnHeader": "Id",
