--- a/locales/es.json
+++ b/locales/es.json
@@ -556,6 +556,7 @@
         "fieldHelpLabel": "Help text",
         "fieldHelpPlaceholder": "Example: Insert both your name and surname",
         "fieldRequiredAuthLabel": "Checked against census in authentication",
+        "fieldUniqueLabel": "Private (only administrators can see and use this field)",
         "extraFieldsHeader": "Extra fields",
         "extraFieldsInfo": "Here you can define extra fields in the census in a versatile way. This allows you to do a range of things: adding extra checks against census in closed registration, registering new fields in open registration, etc.",
         "manage": "Administrar censo",
